--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: Check del repositorio
       uses: actions/checkout@v2
-    - name: Build the Docker image
+    - name: Login en dockerhub
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
@@ -22,6 +22,7 @@ jobs:
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       
     - name: Build
-      run: docker build . --file Dockerfile
+      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/sport-car
+      
     - name: Push
       run: docker push ${{secrets.DOCKER_USER}}/sport-car
