--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - 'Dockerfile'
+    branches:
+      - '*'
 
 jobs:
 
@@ -14,16 +16,15 @@ jobs:
     steps:
     - name: Check del repositorio
       uses: actions/checkout@v2
-    - name: Build the Docker image
-      #uses: docker/login-action@v1
+    - name: Login en dockerhub
       env:
-        DOCKER_USER: $
-        DOCKER_PASSWORD: $
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-
+      
     - name: Build
-      run: docker build . --file Dockerfile
+      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/sport-car
       
     - name: Push
-      run: docker push $
+      run: docker push ${{secrets.DOCKER_USER}}/sport-car
