Añado nuevos path

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,8 +4,9 @@ on:
   push:
     paths:
       - 'Dockerfile'
-    branches:
-      - '*'
+      - 'pyproject.toml'
+      - 'poetry.lock'
+    
 
 jobs:
 
