--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       - 'Dockerfile'
       - 'pyproject.toml'
       - 'poetry.lock'
-    
+      - '.github/workflows/docker-image.yml'
 
 jobs:
 
@@ -18,11 +18,10 @@ jobs:
     - name: Check del repositorio
       uses: actions/checkout@v2
     - name: Login en dockerhub
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        
-      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      uses: docker/login-action@v1
+      with:
+        username: ${{secrets.DOCKER_USER}}
+        password: ${{secrets.DOCKER_PASSWORD}}
       
     - name: Build
       run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/sport-car
