--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 version: 2.1
 
-
 orbs:
  
   python: circleci/python@1.2
@@ -9,7 +8,7 @@ orbs:
 jobs:
   build-and-test: 
     docker:
-      - image: argelion14/sportcar:latest
+      - image: argelion14/sport-car:latest
     
     steps:
       - checkout
