(close #31)Se ha testeado y configurado la CI con Circle CI

--- a/iv.yaml
+++ b/iv.yaml
@@ -4,4 +4,6 @@ automatizar:
   fichero: tasks.py
   orden: invoke
 test: test/test.py
-
+CI:
+  - .github/workflows/testear.yml
+  - .circleci/config.yml
