--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,22 @@
+version: 2.1
 
+orbs:
+ 
+  python: circleci/python@1.2
+
+
+jobs:
+  build-and-test: 
+    docker:
+      - image: argelion14/sport-car:latest
+    
+    steps:
+      - checkout
+      - run:
+          name: Test
+          command: invoke test
+
+workflows:
+  sample: 
+    jobs:
+      - build-and-test
