--- a/azureCI.yml
+++ b/azureCI.yml
@@ -4,8 +4,8 @@ trigger:
     - '*'
   paths:
     include:
-    - my_hairdressing_app
-    - testing
+    - sportcar
+    - test
 
 pr:
   branches:
