--- a/azureCI.yml
+++ b/azureCI.yml
@@ -18,7 +18,14 @@ pr:
 
 pool:
   vmImage: ubuntu-latest
-
+strategy:
+  matrix:
+    Python3.7:
+      python.version: '3.7'
+    Python3.8:
+      python.version: '3.8'
+    Python3.10:
+      python.version: '3.10'
 
 steps:
 - task: UsePythonVersion@0
